[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirastack-plugin-query-metrics"
version = "0.1.0"
description = "MIRASTACK plugin for querying Prometheus/VictoriaMetrics"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
dependencies = [
    "mirastack-agents-sdk>=1.4.1",
    "httpx>=0.27.0",
]

[tool.hatch.build]
include = ["*.py"]

[project.scripts]
mirastack-plugin-query-metrics = "plugin:main"
